--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 </head>
 <body>
     <canvas id="myCanvas" width="480" height="320"></canvas>
-    <input type="button" value="Add DVD" onclick="add_dvd();"/>
+    <input type="button" class="add" value="Add DVD" onclick="add_dvd();"/>
+    <input type="button" class="inf" value="Infinity" onclick="inf();"/>
+    <input type="button" class="res" value="Reset" onclick="res();"/>
     <script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>  
