--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
     <canvas id="myCanvas" width="480" height="320"></canvas>
+    <div id="edit_area"></div>
     <input type="button" class="add" value="Add DVD" onclick="add_dvd();"/>
     <input type="button" class="inf" value="Infinity" onclick="inf();"/>
     <input type="button" class="res" value="Reset" onclick="res();"/>
