--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"></script>
     <script type="text/javascript" src="./js/main.js"></script>
+  </div>
 </body>
 
 </html>
